Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/methods/voidParam.deca
// Description:
//    Déclaration d'une méthode ayant un paramètre de type void
//
// Resultat: Ligne 11
//    ContextualError : Unsupported type in method arguments: Parameter cannot be of type void
//
// Historique:
//    Créé le 24/01/2018

class A{
      void m(void x){
      }
}